internal/gatewayapi/testdata/tlsroute-with-tls-terminate.in.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: tls
          protocol: TLS
          port: 90
          tls:
            certificateRefs:
              - group: ""
                kind: Secret
                name: tls-secret-1
            mode: Terminate
          allowedRoutes:
            namespaces:
              from: All
tlsRoutes:
  - apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: TLSRoute
    metadata:
      namespace: default
      name: tlsroute-1
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
          sectionName: tls
      rules:
        - backendRefs:
            - name: service-1
              port: 8080

secrets:
  - apiVersion: v1
    kind: Secret
    metadata:
      namespace: envoy-gateway
      name: tls-secret-1
    type: kubernetes.io/tls
    data:
      tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFVENDQWZtZ0F3SUJBZ0lVRUZNaFA5ZUo5WEFCV3NRNVptNmJSazJjTE5Rd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZqRVVNQklHQTFVRUF4TUxabTl2TG1KaGNpNWpiMjB3SGhjTk1qUXdNakk1TURrek1ERXdXaGNOTXpRdwpNakkyTURrek1ERXdXakFXTVJRd0VnWURWUVFERXd0bWIyOHVZbUZ5TG1OdmJUQ0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFNdmRxTzcwVVNCTGM1RjdoM1Z4VWd2MU4rSk5vTldnditWS3JtdUsKWGlqM2VQRCtjOHVWN0tEU05VRmo3NUhRUC93UTVLdjg5elVPRXl6N0I2bWpwdXRmMGdpNHpuOUd5Wnl6c2FKbwpScFk2S3c5K3pTU [...]
      tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRREwzYWp1OUZFZ1MzT1IKZTRkMWNWSUw5VGZpVGFEVm9ML2xTcTVyaWw0bzkzancvblBMbGV5ZzBqVkJZKytSMEQvOEVPU3IvUGMxRGhNcword2VwbzZiclg5SUl1TTUvUnNtY3M3R2lhRWFXT2lzUGZzMGtvZEg5Q1NhR2lZMlBxWld5MDF3M1l5eVFzWnNXClQvejhOdUpRV2tQRHJMcXZFcjBFeU5Ia0lFR1VPYm1VcnNXT3VMaEFRR0F2K2hzaVlzdkw2aUl5cHJndDJWa0YKV2lRd0RTdGpiZ2R3dnhwYWUycmZVREJQbEJ6VDVmUDV0YzlzWEcwU05zM255MTBuZ2tFUUtrY1BNU1RRYUtESQpwMHBhVmNyWEtZS [...]
