internal/gatewayapi/testdata/tlsroute-with-tls-terminate.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: tls
      port: 90
      protocol: TLS
      tls:
        certificateRefs:
        - group: ""
          kind: Secret
          name: tls-secret-1
        mode: Terminate
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: tls
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
      - group: gateway.networking.k8s.io
        kind: TLSRoute
infraIR:
  envoy-gateway/gateway-1:
    proxy:
      listeners:
      - name: envoy-gateway/gateway-1/tls
        ports:
        - containerPort: 10090
          name: tls-90
          protocol: TLS
          servicePort: 90
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-1
      namespace: envoy-gateway-system
tlsRoutes:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: TLSRoute
  metadata:
    name: tlsroute-1
    namespace: default
  spec:
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
      sectionName: tls
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
        sectionName: tls
xdsIR:
  envoy-gateway/gateway-1:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-1-196ae069
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/gateway-1
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-envoy-gateway-gateway-1-196ae069
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: envoy-gateway/gateway-1
          protocol: TCP
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
    tcp:
    - address: 0.0.0.0
      externalPort: 90
      metadata:
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: tls
      name: envoy-gateway/gateway-1/tls
      port: 10090
      routes:
      - destination:
          metadata:
            kind: TLSRoute
            name: tlsroute-1
            namespace: default
          name: tlsroute/default/tlsroute-1/rule/-1
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              kind: Service
              name: service-1
              namespace: default
              sectionName: "8080"
            name: tlsroute/default/tlsroute-1/rule/-1/backend/0
            protocol: TCP
            weight: 1
        metadata:
          kind: TLSRoute
          name: tlsroute-1
          namespace: default
        name: tlsroute/default/tlsroute-1
        tls:
          inspector:
            snis:
            - '*'
          terminate:
            alpnProtocols: []
            certificates:
            - certificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFVENDQWZtZ0F3SUJBZ0lVRUZNaFA5ZUo5WEFCV3NRNVptNmJSazJjTE5Rd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZqRVVNQklHQTFVRUF4TUxabTl2TG1KaGNpNWpiMjB3SGhjTk1qUXdNakk1TURrek1ERXdXaGNOTXpRdwpNakkyTURrek1ERXdXakFXTVJRd0VnWURWUVFERXd0bWIyOHVZbUZ5TG1OdmJUQ0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFNdmRxTzcwVVNCTGM1RjdoM1Z4VWd2MU4rSk5vTldnditWS3JtdUsKWGlqM2VQRCtjOHVWN0tEU05VRmo3NUhRUC93UTVLdjg5elVPRXl6N0I2bWpwdXRmMGdpNHpuOUd5Wnl6c2FKbwpSc [...]
              name: envoy-gateway/tls-secret-1
              privateKey: '[redacted]'
      tls:
        alpnProtocols: []
        certificates:
        - certificate: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFVENDQWZtZ0F3SUJBZ0lVRUZNaFA5ZUo5WEFCV3NRNVptNmJSazJjTE5Rd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZqRVVNQklHQTFVRUF4TUxabTl2TG1KaGNpNWpiMjB3SGhjTk1qUXdNakk1TURrek1ERXdXaGNOTXpRdwpNakkyTURrek1ERXdXakFXTVJRd0VnWURWUVFERXd0bWIyOHVZbUZ5TG1OdmJUQ0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFNdmRxTzcwVVNCTGM1RjdoM1Z4VWd2MU4rSk5vTldnditWS3JtdUsKWGlqM2VQRCtjOHVWN0tEU05VRmo3NUhRUC93UTVLdjg5elVPRXl6N0I2bWpwdXRmMGdpNHpuOUd5Wnl6c2FKbwpScFk2S [...]
          name: envoy-gateway/tls-secret-1
          privateKey: '[redacted]'
